--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,5 +21,7 @@
   --main-blue: #011627;
   --secondary-blue: #607b96;
   --tertiary-blue: #1e2d3d;
+  --main-text-blue: #4D5BCE;
   --main-green: #43d9ad;
+
 }
